nav y header avanzados

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>PhotoLab</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
 	
@@ -18,5 +19,19 @@
 			</ul>
 		</div>
 	</nav>
+
+	<header>
+		<img src="dist/img/bg1.jpg" alt="atardecer estrellado">
+		<div class="container">
+			<div class="col offset-l4 l4 text-header center life">
+				<p class="title">YOUR LIFE, A PHOTO</p>
+				<p>print your life in a simple photo</p>
+				<a class="waves-effect waves-light btn">get started</a>
+			</div>
+		</div>
+		
+	</header>
+
+	<script src="dist/js/script.js"></script>
 </body>
 </html>
