nav y header listos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>PhotoLab</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
 	<!-- nav -->
 	<nav>
 		<div class="nav-wrapper">
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
+			<ul id="nav-mobile" class="center-align hide-on-med-and-down">
 				<li><a href="#">HOME</a></li>
 				<li><a href="#">PHOTOAPP</a></li>
 				<li><a href="#">DESIGN</a></li>
