secciones dos, tres y cuatro listas

--- a/index.html
+++ b/index.html
@@ -33,6 +33,62 @@
 		
 	</header>
 
+	<section class="two">
+		<div class="container-fluid section-two">
+			<div class="row">
+				<div class="col l5">
+					<div class="cont-info">
+						<span>RAPPRESENT YOUR LIFE WITH A</span><br>
+						<span>SIMPLE PHOTO</span>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nihil excepturi sed asperiores eos tempore <br> omnis, molestiae fugit, <strong>a quaerat amet</strong> tempora. <br> Nihil, rerum ipsum sapiente voluptates sit <br> dolores tempore beatae.</p>
+						<a class="waves-effect waves-light btn">get started</a>
+					</div>
+				</div>
+				<div class="col l7 img-hand">
+					<!-- contenedor imagen -->
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="three">
+		<div class="container-fluid section-three">
+			<div class="row">
+				<div class="col l5 center">
+					<img src="dist/img/phone.png" alt="smartphone">
+				</div>
+				<div class="col offset-l2 l5">
+					<div class="cont-info">
+						<span>DESIGN</span>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolorum sequi tempora reprehenderit <br> laudantium! <strong>Commodi, dolores.</strong> Sunt esse et <br> maxime id sed similique tenetur modi <br> totam error, fugit facilis corporis.</p>
+						<a class="waves-effect waves-light btn">learn more</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="four">
+		<div class="container-fluid section-four">
+			<div class="row">
+				<div class="col l3 our-community center">
+					<span>OUR COMMUNITY</span>
+					<p>Lorem ipsum dolor sit <br> amet, consectetur <br> adipisicing elit.</p>
+				</div>
+				<div class="col l9">
+					<div class="row">
+						<div class="col l6">
+							<img src="img/car.jpg" alt="camioneta">
+						</div>
+						<div class="col l6">
+							<img src="img/leaf.jpg" alt="hoja">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script src="dist/js/script.js"></script>
 </body>
 </html>
