--- a/index.html
+++ b/index.html
@@ -89,6 +89,32 @@
 		</div>
 	</section>
 
+	<section class="five">
+		<div class="container-fluid section-five">
+			<div class="cont-form">
+				<div class="row">
+					<form class="col offset-l3 l6 center">
+						<span>SUBSCRIBE TO US COMMUNITY</span>
+						<div class="row">
+							<div class="input-field col offset-l2 l8">
+								<div class="row">
+									<div class="col l10">
+										<input id="email" type="email" class="validate">
+										<label for="email">YOUR EMAIL</label>
+									</div>
+									<div class="col l2 icon">
+										<i class="small material-icons">check</i>
+									</div>
+								</div>
+								
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script src="dist/js/script.js"></script>
 </body>
 </html>
