secciones download y footer listas

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
 		</div>
 	</section>
 
+	<section class="download">
+		<div class="container-fluid section-download">
+			<div class="row">
+				<div class="col offset-l1 l10 center">
+					<span>DOWNLOAD IT</span>
+					<p class="uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sint aspernatur atque odit harum iusto nobis minus commodi rerum, quisquam laudantium cum labore illum enim, fuga fugiat animi reiciendis, facere.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col l6 boton">
+					<a class="waves-effect waves-light btn btn-apple">apple store</a>
+				</div>
+				<div class="col l6 boton">
+					<a class="waves-effect waves-light btn btn-play">play store</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="footer">
+		<div class="container-fluid section-footer">
+			<div class="row">
+				<div class="col l6 cont-footer">
+					<p>CREDITS <span>|</span> PRIVACY <span>|</span> OUR TEAM</p>
+					<p>Copyright by phototime - all right reserved</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script src="dist/js/script.js"></script>
 </body>
 </html>
