se arregla un problema de resolución

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<!-- nav -->
 	<nav>
-		<div class="nav-wrapper">
+		<div class="nav-wrapper cont-nav">
 			<ul id="nav-mobile" class="center-align hide-on-med-and-down">
 				<li><a href="#">HOME</a></li>
 				<li><a href="#">PHOTOAPP</a></li>
@@ -22,15 +22,14 @@
 	</nav>
 
 	<header>
-		<img src="dist/img/bg1.jpg" alt="atardecer estrellado">
-		<div class="container">
+		<!--<img src="dist/img/bg1.jpg" alt="atardecer estrellado">-->
+		<div class="container cont-header">
 			<div class="col offset-l4 l4 text-header center life">
 				<p class="title">YOUR LIFE, A PHOTO</p>
 				<p>print your life in a simple photo</p>
 				<a class="waves-effect waves-light btn">get started</a>
 			</div>
 		</div>
-		
 	</header>
 
 	<section class="two">
@@ -138,7 +137,7 @@
 		<div class="container-fluid section-footer">
 			<div class="row">
 				<div class="col l6 cont-footer">
-					<p>CREDITS <span>|</span> PRIVACY <span>|</span> OUR TEAM</p>
+					<p>CREDITS <span>|</span> PRIVACY <span>|</span> OUR TEAMS</p>
 					<p>Copyright by phototime - all right reserved</p>
 				</div>
 			</div>
